--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "watch": "npx tailwindcss -i ./public/css/input.css -o ./public/css/style.css --watch"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0"
